# backend-mit

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json  config.go  go.mod  go.sum  main.go
src/: channel.rs  config.rs  main.rs  rest.rs  rest_service.rs  rest_util.rs  transferdata.rs  util.rs
src/rest_controllers/: download_file.rs  mod.rs  non_match.rs  query.rs
