[package]
name = "backend-mit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

grammers_client = { git = "https://github.com/Lonami/grammers", branch = "master", package="grammers-client" }
grammers_session = { git = "https://github.com/Lonami/grammers", branch = "master", package="grammers-session" }
tokio = { version = "1.26.0", features = ["full"] }
