[package]
name = "backend-mit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

grammers_client = { git = "https://github.com/Lonami/grammers", branch = "master", package="grammers-client" }
grammers_tl_types = { git = "https://github.com/Lonami/grammers", branch = "master", package="grammers-tl-types" }
grammers_session = { git = "https://github.com/Lonami/grammers", branch = "master", package="grammers-session" }
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
url = "2.3.1"
cacache = { version = "*", default-features = false, features = ["tokio-runtime"] }
bincode = "1.3.3"
